@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Jan-2010 Hannes Papenberg
+# Improved performance of JPluginHelper - Thanks Omar!
+
 25-Jan-2010 Louis Landry
  ^ Moved testing infrastructure from the /testing/ folder into the trunk.
 
